--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,8 @@ code {
 
 button {
   font-size: 20px;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   color: teal;
   background: linear-gradient(259.07deg,
   rgb(250, 247, 250) 4.07%,
@@ -36,6 +36,12 @@ button {
 
 .status {
   min-height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: auto;
+
 }
 
 .game-board {
