--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Quantico', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Quantico', sans-serif;
 }
 
 h1 {
@@ -18,6 +15,8 @@ h1 {
 }
 
 button {
+  font-family: 'Quantico', sans-serif;
+  font-weight: 700;
   font-size: 20px;
   width: 50px;
   height: 50px;
@@ -30,7 +29,6 @@ button {
   background-color: #DAF8FF;
   border-color: rgb(233, 233, 233); 
   float: left;
-  font-weight: bold;
 }
 
 .App {
